--- a/app/src/main/res/layout/activity_view_bill.xml
+++ b/app/src/main/res/layout/activity_view_bill.xml
@@ -10,6 +10,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- Logo -->
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/voltify_logo"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="8dp"/>
+
+        <!-- App name -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Voltify"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"/>
+
+
         <TextView
             android:id="@+id/textViewMonth"
             android:layout_width="match_parent"
